--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Dependencies
+ . Dependencies
 node_modules
 */node_modules
 **/node_modules
@@ -8,7 +8,7 @@ package-lock.json
 pnpm-lock.yaml
 yarn.lock
 
-# Build outputs
+ . Build outputs
 dist
 */dist
 **/dist
@@ -18,19 +18,19 @@ build
 .cache
 *.cache
 
-# Environment files
+ . Environment files
 .env
 .env.*
 !.env.example
 
-# IDE and editor files
+ . IDE and editor files
 .vscode
 .idea
 *.swp
 *.swo
 *~
 
-# OS generated files
+ . OS generated files
 .DS_Store
 .DS_Store?
 ._*
@@ -39,7 +39,7 @@ build
 ehthumbs.db
 Thumbs.db
 
-# Logs
+ . Logs
 logs
 *.log
 npm-debug.log*
@@ -47,54 +47,54 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
-# Coverage directory used by tools like istanbul
+ . Coverage directory used by tools like istanbul
 coverage
 *.lcov
 
-# Temporary files
+ . Temporary files
 *.tmp
 *.temp
 logo-optimized.txt
 
-# Optional npm cache directory
+ . Optional npm cache directory
 .npm
 
-# Optional eslint cache
+ . Optional eslint cache
 .eslintcache
 
-# Optional REPL history
+ . Optional REPL history
 .node_repl_history
 
-# Output of 'npm pack'
+ . Output of 'npm pack'
 *.tgz
 
-# Yarn Integrity file
+ . Yarn Integrity file
 .yarn-integrity
 
-# parcel-bundler cache (https://parceljs.org/)
+ . parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
 
-# next.js build output
+ . next.js build output
 .next
 
-# nuxt.js build output
+ . nuxt.js build output
 .nuxt
 
-# vuepress build output
+ . vuepress build output
 .vuepress/dist
 
-# Serverless directories
+ . Serverless directories
 .serverless
 
-# FuseBox cache
+ . FuseBox cache
 .fusebox/
 
-# DynamoDB Local files
+ . DynamoDB Local files
 .dynamodb/
 
-# TernJS port file
+ . TernJS port file
 .tern-port
 
-# Stores VSCode versions used for testing VSCode extensions
+ . Stores VSCode versions used for testing VSCode extensions
 .vscode-test
